--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   # Add WebView plugin
-  webview_flutter: ^4.4.2
+  webview_flutter: ^latest_version
 
   # Linting package
   flutter_lints: ^5.0.0
