--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,22 @@
-name: flutter_lpos
-description: A new Flutter project.
+name: webview_app
+description: A Flutter WebView application
 
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # Add WebView plugin
-  webview_flutter: ^latest_version
-
-  # Linting package
-  flutter_lints: ^5.0.0
+  webview_flutter: ^4.4.2  # Use specific version number
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.0
+
+flutter:
+  uses-material-design: true
